# imu-orientation-estimator

./: .clang-format  .clang-tidy
src/imu_demo/: CMakeLists.txt  package.xml
src/imu_demo/launch/: demo.launch.py
src/orientation_viz/: CMakeLists.txt  package.xml
src/orientation_viz/config/: config.rviz
src/orientation_viz/src/: tf_broadcaster.cpp
src/tilt_detection/: CMakeLists.txt  package.xml
src/tilt_detection/include/tilt_detection/tools/: IMUComplementaryFilter.hpp  OrientationEstimator.hpp
src/tilt_detection/src/: tilt_detection_node.cpp
src/tilt_detection/src/tools/: IMUComplementaryFilter.cpp  OrientationEstimator.cpp
src/tilt_detection/test/: tilt_detection_test.cpp
src/tilt_detection_msgs/: CMakeLists.txt  package.xml
src/tilt_detection_msgs/msg/: TiltStatus.msg
