<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="souhailcht@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>tilt_detection</exec_depend>
  <exec_depend>orientation_viz</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
